# RustyBoids

./: Cargo.toml  README.md
crates/bitonic_merge_sorting/: Cargo.toml
crates/bitonic_merge_sorting/src/: main.rs
shaders/: bitonicSort.wgsl  compute.wgsl  computeGrid.wgsl  computeNaive.wgsl  computeNative.wgsl  display.wgsl  flocking.wgsl  init.wgsl
src/: app.rs  boids.rs  main.rs  simulation.rs  sorting.rs  utils.rs
src/simulation/: gpu_spatial_partitioning_strategy.rs  parameters.rs  types.rs
