[package]
name = "rusty_boids"
version = "0.0.1"
authors = ["DE SMET Enguerrand"]
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
oxyde = {git = 'https://github.com/dsmtE/oxyde' }

anyhow = "1"

# logging
log = "0.4"
fern = {version = "0.6", features = [ "colored" ] }
chrono = "0.4"
rand = "0.8.5"
wgpu-profiler = "0.15.0"
nalgebra-glm = { version = "0.18", features = [ "convert-bytemuck" ] }
bytemuck = { version = "1.13", features = [ "derive" ] }

# Overriding repository URL to work with git submodules
[patch."https://github.com/dsmtE/oxyde"]
oxyde = { path = "crates/oxyde" }

[[bin]]
name = "rusty_boids"
path = "src/main.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1